# ser-no-std

./: README.md
blinky/: Cargo.toml  diagram.json  wokwi.toml
blinky/src/: main.rs
button-controlled-blink/: Cargo.toml  diagram.json  wokwi.toml
button-controlled-blink/src/: main.rs
button-press-counter/: Cargo.toml  diagram.json  wokwi.toml
button-press-counter/src/: main.rs
console-printing/: Cargo.toml  diagram.json  wokwi.toml
console-printing/src/: main.rs
embassy-blinky/: Cargo.toml  diagram.json  wokwi.toml
embassy-blinky/src/: main.rs
embassy-led-cycling/: Cargo.toml  diagram.json  wokwi.toml
embassy-led-cycling/src/: main.rs
embassy-real-time-timer/: Cargo.toml  wokwi.toml
embassy-real-time-timer/src/: main.rs
embassy-uart-echo/: Cargo.toml  wokwi.toml
embassy-uart-echo/src/: main.rs
i2c-real-time-clock/: Cargo.toml  diagram.json  wokwi.toml
i2c-real-time-clock/src/: main.rs
i2c-scanner/: Cargo.toml  diagram.json  wokwi.toml
i2c-scanner/src/: main.rs
led-fading/: Cargo.toml  diagram.json  wokwi.toml
led-fading/src/: main.rs
real-time-timer/: Cargo.toml  wokwi.toml
real-time-timer/src/: main.rs
temperature-sensing/: Cargo.toml  diagram.json  wokwi.toml
temperature-sensing/src/: main.rs
timer-based-delay/: Cargo.toml  diagram.json  wokwi.toml
timer-based-delay/src/: main.rs
voltmeter/: Cargo.toml  diagram.json  wokwi.toml
voltmeter/src/: main.rs
